# wasm-os

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  HELLO.md  JIT_Agile_plan.md  MVP_Agile_plan.md  Post_MVP_Agile_plan.md  README.md  fs.img  rust-toolchain.toml
.claude/: settings.local.json
docs/: architecture.md  roadmap.md  wasm-runtime.md
fs/: Cargo.toml
fs/src/: lib.rs
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: fs.rs  keyboard.rs  main.rs  scheduler.rs  shell.rs  vga.rs
kernel/src/drivers/: keyboard.rs  mod.rs  pit.rs  serial.rs  virtio_blk.rs  virtio_net.rs
kernel/src/drivers/netstack/: arp.rs  dhcp.rs  ethernet.rs  ip.rs  mod.rs  tcp.rs  udp.rs
kernel/src/fs/: block.rs  fat.rs  mod.rs  wasmfs.rs
kernel/src/interrupts/: handlers.rs  idt.rs  mod.rs
kernel/src/jit/: compile.rs  emit.rs  mod.rs
kernel/src/memory/: allocator.rs  mod.rs
kernel/src/shell/: command_line_editor.rs  input.rs  mod.rs
kernel/src/shell/commands/: asm.rs  cat.rs  cd.rs  clear.rs  df.rs  echo.rs  edit.rs  help.rs  history.rs  info.rs  ls.rs  mkdir.rs  mod.rs  ps.rs  rm.rs  run.rs  save.rs  tasks.rs  write.rs
kernel/src/wasm/: engine.rs  interp.rs  loader.rs  mod.rs  opcode.rs  task.rs
roms/: README.md
runner/: Cargo.toml
runner/src/: main.rs
runtime/: Cargo.toml
scripts/: dev-env.sh  setup.sh
shell/: Cargo.toml
tools/: build-image.sh  pack-fs.sh  run-qemu.sh  wasm-pack.sh
userland/: README.md
wasm-test/: Cargo.toml
wasm-test/.cargo/: config.toml
wasm-test/src/: lib.rs
wasm-test/tests/: i32_ops.rs  userland.rs
(+27 files in other folders)
